syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc CalculatePolynomial (PolynomialRequest) returns (PolynomialResult);
}

// The request message containing the user's name.
message PolynomialRequest {
  repeated int32 BaseArray = 4 ;
  int32 X = 1;
}

// The response message containing the greetings.
message PolynomialResult {
  double result = 1;
}
